--- a/IDERA/segmentos.censo2022.rmd
+++ b/IDERA/segmentos.censo2022.rmd
@@ -32,22 +32,22 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 # Tareas: Generar mapas, recorridos, planillas.
 
--   16 millones de domicilios.
--   Carga promedio en zona urbana: entre 30 y 36 viviendas (según la provincia)
--   Carga promedio en asentamientos: 18 viviendas.
--   Carga promedio en zona suburbana: 12 a 15 viviendas.
--   De 8 a 12 hs. de trabajo.
--   Aprox. 650 mil censistas
+*   16 millones de domicilios.
+*   Carga promedio en zona urbana: entre 30 y 36 viviendas (según la provincia)
+*   Carga promedio en asentamientos: 18 viviendas.
+*   Carga promedio en zona suburbana: 12 a 15 viviendas.
+*   De 8 a 12 hs. de trabajo.
+*   Aprox. 650 mil censistas
 
 ------------------------------------------------------------------------
 
 # Tipos de Radios
 
--   Urbano
+*   Urbano
 
 --- población agrupada únicamente, y conformado por manzanas y/o sectores pertenecientes a una localidad. ---
 
--   Suburbano
+*   Suburbano
 
 --- agrupada en pequeños poblados o en bordes amanzanados de localidades. ---
 
@@ -55,8 +55,8 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 # Delimitación del segmento
 
--   Todo espacio (con o sin viviendas) debe estar asignado a un segmento.
--   Identificar claramente Inicio y Fin de cada segmento.
+*   Todo espacio (con o sin viviendas) debe estar asignado a un segmento.
+*   Identificar claramente Inicio y Fin de cada segmento.
 
 ------------------------------------------------------------------------
 
@@ -64,9 +64,9 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 ## Evitar
 
--   Recorrido discontinuo
--   Cruce en diagonal
--   "En lo posible" cruce de avenidas, rutas, vías de ferrocarril o cursos de agua.
+*   Recorrido discontinuo
+*   Cruce en diagonal
+*   "En lo posible" cruce de avenidas, rutas, vías de ferrocarril o cursos de agua.
 
 ------------------------------------------------------------------------
 
@@ -120,15 +120,15 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 # Numeración de los segmentos
 
--   Cada segmento del radio urbano se identifica con un número de dos dígitos, de 01 en más, dentro del radio.
--   En el área urbana del radio mixto los segmentos se numeran del 60 en más excluyendo al 90.
--   El segmento 90 contiene las viviendas colectivas del radio.
+*   Cada segmento del radio urbano se identifica con un número de dos dígitos, de 01 en más, dentro del radio.
+*   En el área urbana del radio mixto los segmentos se numeran del 60 en más excluyendo al 90.
+*   El segmento 90 contiene las viviendas colectivas del radio.
 
 ------------------------------------------------------------------------
 
 # Descripción del problema.
 
--   Armar el recorrido de 650.000 censistas para que visiten todas las viviendas del territorio siguiendo las reglas definidas en el MANUAL del SEGMENTADOR.
+*   Armar el recorrido de 650.000 censistas para que visiten todas las viviendas del territorio siguiendo las reglas definidas en el MANUAL del SEGMENTADOR.
 
 ------------------------------------------------------------------------
 
@@ -142,9 +142,9 @@ En este caso, \$ S \$ es el conjunto de todas las segmentaciones posibles, \$ x 
 
 ## Función objetivo con costo que incluye penalidad
 
--   cantidad de viviendas por segmento 
--   cantidad de manzanas por segmento
--   tipos de ejes que se cruzan 
+*   cantidad de viviendas por segmento 
+*   cantidad de manzanas por segmento
+*   tipos de ejes que se cruzan 
 
 ------------------------------------------------------------------------
 
@@ -157,7 +157,7 @@ En este caso, \$ S \$ es el conjunto de todas las segmentaciones posibles, \$ x 
 :::
 
 ::: {.column width="50%"}
--   Vecinos se calculan con operaciones elementales
+*   Vecinos se calculan con operaciones elementales
 
 1.  extraer componente (manzana o lado) de segmento
 2.  transferir componente de un segmento a otro
@@ -223,11 +223,11 @@ En este caso, \$ S \$ es el conjunto de todas las segmentaciones posibles, \$ x 
 ------------------------------------------------------------------------
 # Optmización de recursos
 
--  se redujo el tiempo de armado e impresion de mapas
--  se utilizo el complemento atlas para automatizar el armado de los mapas para censistas, jefes de radios, fracciones, departamentos
--  y la planilla de recorrido del censista R3 
--  se informatizó y masificó la distribución de planos utilizando formato digital (.pdf .png)
--  se fomentó el uso de herramientas de software libre, QGIS
+*  se redujo el tiempo de armado e impresion de mapas
+*  se utilizo el complemento atlas para automatizar el armado de los mapas para censistas, jefes de radios, fracciones, departamentos
+*  y la planilla de recorrido del censista R3 
+*  se informatizó y masificó la distribución de planos utilizando formato digital (.pdf .png)
+*  se fomentó el uso de herramientas de software libre, QGIS
 
 ------------------------------------------
 
