imagen SG fracción

--- a/IDERA/segmentos.censo2022.rmd
+++ b/IDERA/segmentos.censo2022.rmd
@@ -230,5 +230,11 @@ En este caso, \$ S \$ es el conjunto de todas las segmentaciones posibles, \$ x 
 
 ------------------------------------------
 
+# Espacio de trabajo QGIS
+
+![Mapa Fracción](imagenes/SG_fraccion.png)
+
+
+------------------------------------------
 
 # Conclusiones.
