--- a/IDERA/segmentos.censo2022.rmd
+++ b/IDERA/segmentos.censo2022.rmd
@@ -1,10 +1,21 @@
 ---
-title: "Segmentación Censo 2022"
-author: "Hernán Alperin, Verónica Heredia, Manuel Retamozo"
+title: |
+  ![](imagenes/logo_censo2022.png)
+  Segmentación Censo 2022
+author: 
+  - "Hernán Alperin"
+  - "Verónica Heredia"
+  - "Manuel Retamozo"
 date: "June, 2022"
 output:
-  powerpoint_presentation:
-    reference_doc: idera-styles.pptx
+  revealjs::revealjs_presentation:
+    incremental: true
+  powerpoint_presentation: 
+    reference_doc: cac-custom-reference.pptx
+    keep_md: true
+    fig_width: 7
+    fig_height: 4
+    fig_caption: yes
   html_document:
     toc: yes
     toc_depth: 2
@@ -13,17 +24,18 @@ output:
       in_header: header.html
       before_body: doc_prefix.html
       after_body: doc_suffix.html
+  slidy_presentation: default
+  pdf_document: default
+  ioslides_presentation: default
   beamer_presentation: 
     toc: yes
     incremental: yes
-  pdf_document: default
-  slidy_presentation: default
-  ioslides_presentation: default
-subtitle: Generación de Segmentos Geográficos para el Censo 2022 en áreas urbanas
+subtitle: "Generación de Segmentos Geográficos para el Censo 2022 en áreas urbanas
   y suburbanas"
 encoding: utf8
 ---
 
+<!-- por acá empieza Vero la resentación -->
 # Introducción al problema. {style="class: center, inverse; background-image: url('plantilla_idera_html/img0.png');"}
 
 ## ¿Que es la segmentación?
@@ -34,7 +46,7 @@ Para asegurar que todas las viviendas sean censadas, hay que determinar qué ár
 
 ------------------------------------------------------------------------
 
-# Tareas: Generar mapas, recorridos, planillas.
+# Tareas: Generar mapas, recorridos, planillas. {.unlisted .unnumbered}
 
 -   16 millones de domicilios.
 -   De 8 a 12 hs. de trabajo.
@@ -59,12 +71,11 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 ------------------------------------------------------------------------
 
-# Función objetivo con costo que incluye penalidad 
+# Función objetivo con costo que incluye penalidad
 
 -   Cantidad de viviendas por segmento
 -   Cantidad de manzanas por segmento
 -   Tipos de ejes que se cruzan
-
 
 ------------------------------------------------------------------------
 
@@ -87,7 +98,7 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 # Segmentos
 
-![Mapas de análisis](imagenes/mapa.png)
+![Mapas de análisis](imagenes/mapa.png){width=90%}
 
 ------------------------------------------------------------------------
 
@@ -109,7 +120,7 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 ------------------------------------------------------------------------
 
-# Tipos de Radios Urbanos o parte Urbana de Radios Mixtos
+# Radios Urbanos o parte Urbana de Radios Mixtos
 
 ## Según distribución de viviendas dada una carga deseada.
 
@@ -129,21 +140,21 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 # Generación de segmentaciones vecinas
 
-![Extraer componente](imagenes/extraer.png)
+![Extraer componente](imagenes/extraer.png){width=90%}
 
 ------------------------------------------------------------------------
 
-![Transferir componente](imagenes/transferir.png)
+![Transferir componente](imagenes/transferir.png){width=90%}
 
 ------------------------------------------------------------------------
 
-![Fusionar componente](imagenes/fusionar.png)
+![Fusionar componente](imagenes/fusionar.png){width=90%}
 
 ------------------------------------------------------------------------
 
 # Optimización global
 
-![Espacio de soluciones](imagenes/optimizacion_global.png)
+![Espacio de soluciones](imagenes/optimizacion_global.png){width=90%}
 
 ------------------------------------------------------------------------
 
@@ -153,11 +164,11 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 ::: {.column width="50%"}
 ## Optimización Discreta
 
-![](imagenes/optimizacion_discreta.png)
+![](imagenes/optimizacion_discreta.png){width=45%}
 :::
 
 ::: {.column width="50%"}
--   Vecinos se calculan con operaciones elementales
+##   Vecinos se calculan con operaciones elementales
 
 1.  Extraer componente (manzana o lado) de segmento
 2.  Transferir componente de un segmento a otro
@@ -169,19 +180,19 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 # Algoritmo para radios esparcidos (lados completos)
 
-1. Tomar una segmentación inicial y hacer que sea la actual
-1. Calcular todas las segmentaciones vecinas a la actual y elejir una de costo mínimo
-2. Si su costo es menor que el costo de la segmentación actual, hacer ésta la nueva segmentación actual e iterar
-3. Si no, la segmentación actual es un mínimo local, terminar.
+1.  Tomar una segmentación inicial y hacer que sea la actual
+2.  Calcular todas las segmentaciones vecinas a la actual y elejir una de costo mínimo
+3.  Si su costo es menor que el costo de la segmentación actual, hacer ésta la nueva segmentación actual e iterar
+4.  Si no, la segmentación actual es un mínimo local, terminar.
 
 ------------------------------------------------------------------------
 
 # Algoritmo para radios densos (manzanas independientes)
 
-1. En cada manzana encontrar el número entero $d_m$ más cercano a cantidad de viviendas de la manzana dividido por la cantidad de viviendas deseada
-2. Hacer ese, el número de segmentos en la manzana $m$
-3. Calcular la cantidad de viviendas por segmento en la manzana $m$, $s_m = v_m / d_m$
-4. Segmentar el listado de la manzana $m$ cortando a pisos enteros, avanzando con segmentos de cantidad de viviendas lo más cercano a $s_m$ posible
+1.  En cada manzana encontrar el número entero $d_m$ más cercano a cantidad de viviendas de la manzana dividido por la cantidad de viviendas deseada
+2.  Hacer ese, el número de segmentos en la manzana $m$
+3.  Calcular la cantidad de viviendas por segmento en la manzana $m$, $s_m = v_m / d_m$
+4.  Segmentar el listado de la manzana $m$ cortando a pisos enteros, avanzando con segmentos de cantidad de viviendas lo más cercano a $s_m$ posible
 
 ------------------------------------------------------------------------
 
@@ -201,83 +212,72 @@ En este caso, $S$ es el conjunto de todas las segmentaciones posibles, $x$ es un
 
 ------------------------------------------------------------------------
 
+\newpage
 # Carga de datos y procesamiento de datos.
 
-![DTL](imagenes/DTL.png)
+![DTL](imagenes/DTL.png){width=90%}
 
 |                           |
 |:--------------------------|
 | \# Software utilizado     |
-| ![L](imagenes/amigos.png) |
+| ![L](imagenes/amigos.png){width=90%} |
 
 # Segmentación.
 
-![Parámetros](imagenes/SP.png)
+![Parámetros](imagenes/SP.png){width=90%}
 
 ------------------------------------------------------------------------
 
 # Generación de resumenes.
 
-![Resumen R3](imagenes/R3.png)
+![Resumen R3](imagenes/R3.png){width=90%}
 
-------------------------------------------------------------------------
-# Radios Urbanos 
-
-![](imagenes/RU.png)
-
-------------------------------------------------------------------------
-# Radios Suburbanos
-
-![](imagenes/RSU.png)
-
-------------------------------------------------------------------------
+| \# Radios Urbanos     |
+|:----------------------|
+| \# Radios Suburbanos  |
+| ![](imagenes/RSU.png){width=90%} |
 
 # Estructura de Base de Datos
 
-![](imagenes/BD.png)
+![](imagenes/BD.png){width=90%}
 
 ------------------------------------------------------------------------
 
 # Salidas Gráficas.
 
-![](imagenes/plugin.png)
+![](imagenes/plugin.png){width=90%}
 
 ------------------------------------------------------------------------
-# Mapas de Fracción
 
-![Plugin](imagenes/MF.png)
+| \# Mapas de Fracción |
+|:---------------------|
+| \# Mapas de Radio    |
+| ![](imagenes/MR.png){width=90%} |
 
-------------------------------------------------------------------------
-# Mapas de Radio
-
-![](imagenes/MR.png)
-
-------------------------------------------------------------------------
 # Mapas de Segmento
 
-![](imagenes/MS.png)
+![](imagenes/MS.png){width=90%}
 
 ------------------------------------------------------------------------
 
 # Optmización de recursos
 
-*  Se redujo el tiempo de armado e impresión de mapas
-*  Se utilizó el complemento atlas para automatizar el armado de los mapas para censistas, 
-jefes de radio, fracción, departamento y la planilla R3 de recorrido del censista
-*  Se informatizó y masificó la distribución de planos utilizando formato digital (.pdf .png)
-*  Se fomentó el uso de herramientas de software libre, QGIS
+-   Se redujo el tiempo de armado e impresión de mapas
+-   Se utilizó el complemento atlas para automatizar el armado de los mapas para censistas, jefes de radio, fracción, departamento y la planilla R3 de recorrido del censista
+-   Se informatizó y masificó la distribución de planos utilizando formato digital (.pdf .png)
+-   Se fomentó el uso de herramientas de software libre, QGIS
 
--------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # Espacio de trabajo QGIS
 
-![Mapa Fracción](imagenes/SG_fraccion.png)
+![Mapa Fracción](imagenes/SG_fraccion.png){width=90%}
 
--------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # Conclusiones.
 
-* Pudimos resolver un problema complicado con algoritmos sencillos
-* Creamos una interface para la carga de datos y procesamiento de la segmentación
-* Creamos un plugin para la automatización de salidas gráficas y recorridos 
-* Optimizamos tiempo y recursos para el armado de material de campo 
+-   Pudimos resolver un problema complicado con algoritmos sencillos
+-   Creamos una interface para la carga de datos y procesamiento de la segmentación
+-   Creamos un plugin para la automatización de salidas gráficas y recorridos
+-   Optimizamos tiempo y recursos para el armado de material de campo
